apps/immich/deployment-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:18-vectorchord0.5.3
          volumeMounts:
            - name: postgres
              mountPath: /var/lib/postgresql
      volumes:
#        - name: postgres-data
#          persistentVolumeClaim:
#            claimName: immich-postgres
        - name: postgres
          persistentVolumeClaim:
            claimName: immich-postgres
