apps/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14
          volumeMounts:
            - name: config
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: immich-config
